--- a/css/mediaqueries.css
+++ b/css/mediaqueries.css
@@ -5,20 +5,19 @@
 
 @media screen and (min-width: 768px){
 	nav{
-		height: 100px;
 		background: #000000;
+		padding: 1.5em 0 1.5em 0;
 	}
 	#menu_principal{
 		color: #FFFFFF;
-		padding: 1em 0 1em 0;
 		width: 70%;
 	}
 
 	#menu_principal li{
-		border-bottom:1px solid #FFFFFF;
+		border:none;
 		display: inline-block;
-		margin: 0 0 0 10px;
-		padding: 1em 0 1em 0;
+		
+		padding: 0.6em 0 0.6em 0;
 		text-align: center;
 		width: 90px;
 	}
