cambiando fondo a lista de productos

--- a/css/producto.css
+++ b/css/producto.css
@@ -28,7 +28,7 @@
 }
 
 #lista_productos ul li{
-	background-color: #46AFFF;
+	background-color: #FA9393;
 	display: inline-block;
 	margin-bottom: 5px;
 	height: 150px;
