--- a/css/mediaqueries.css
+++ b/css/mediaqueries.css
@@ -37,6 +37,19 @@
 	#redes_sociales li{
 		display: inline-block;
 	}
+
+	/*Contenedor */
+	#lista_categorias,#lista_productos{
+		padding-top: 2em;
+		display: inline-block;
+		vertical-align: top;
+	}
+	#lista_categorias{
+		width: 20%;
+	}
+	#lista_productos{
+		width: 75%;
+	}
 }
 
 
