dando estilos a panel de control

--- a/css/mediaqueries.css
+++ b/css/mediaqueries.css
@@ -39,6 +39,9 @@
 	}
 
 	/*Contenedor */
+	#lista_productos ul li{
+		margin: 5px;
+	}
 	#lista_categorias,#lista_productos{
 		padding-top: 2em;
 		display: inline-block;
