--- a/css/admin.css
+++ b/css/admin.css
@@ -1,12 +1,29 @@
 html,body{
-	height: 100%;
+	height: 80%;
 }
 div{
-	background: #7C7C7C;
+	color:#D9D9D9;
+	background: #000000;
 	text-align: center;
 	position: relative;
-	height: 300px;
+	padding: 2em 0 2em 0;
 }
-form{
+form li{
+	display: inline-block;
+	
+}
+form li input {
+	color:#000000;
+}
+#logo{
+	height: 100%;
+	background: #FFFFFF;
+}
+footer{
 	text-align: center;
+	padding: 2em 0 1em 0;
+	background:#000000;
+}
+footer h2{
+	color:#E9E9E9;
 }
