--- a/css/mediaqueries.css
+++ b/css/mediaqueries.css
@@ -5,18 +5,16 @@
 
 @media screen and (min-width: 768px){
 	nav{
-		background: #000000;
 		padding: 1.5em 0 1.5em 0;
 	}
 	#menu_principal{
-		color: #FFFFFF;
 		width: 70%;
 	}
 
 	#menu_principal li{
 		border:none;
+		border-bottom: 1px solid  #727272;
 		display: inline-block;
-		
 		padding: 0.6em 0 0.6em 0;
 		text-align: center;
 		width: 90px;
