--- a/css/mediaqueries.css
+++ b/css/mediaqueries.css
@@ -82,6 +82,14 @@
 		width: 75%;
 	}
 
+	/* Servicios */
+
+	#content_servicio #servicios ul h3{
+		font-size: 25px;
+	}
+
+	/* Fin Servicios */
+
 
 	/*footer*/
 	footer li{
@@ -103,4 +111,12 @@
 	header #slogan h1{
 		font-size: 30px;
 	}
+
+	/* Servicios */
+
+	#content_servicio #servicios ul h3{
+		font-size: 40px;
+	}
+
+	/* Fin Servicios */
 }
