--- a/css/base.css
+++ b/css/base.css
@@ -45,7 +45,7 @@ nav{
 	color: #727272;
 }
 #menu_principal li{
-	border-bottom: 1px solid #EDEDED;
+	border-bottom: 1px solid #C9C9C9;
 	padding: 1em 0 1em 0;
 	display: block;
 	width: 100%;
@@ -78,13 +78,11 @@ nav{
 	background-repeat: no-repeat;
 	background-size: cover;
 	height: 100%;
-
 }
 #content #fondo section{
 	background:#C44522;
 	margin: 0px;
 	height: 100%;
-
 }
 #content #fondo section h4{
 	color:#757575;
@@ -103,26 +101,18 @@ nav{
 #content #fondo #promociones ul li{
 	padding: 0.5em 0 0.5em 0;
 	display: block;
-
 }
 #content #fondo #promociones ul li {
 	width: 100%;
-}
-#content #fondo #promociones ul li figure{
-
 }
 #content #fondo #promociones ul li figure img {
 	widows: 250px;
 	height: 150px;
 }
-#content #fondo #promociones ul li p {
-	
-}
-#content #fondo #promociones ul li p,figure{
-	 display: block;
+#content #fondo section{
+	text-align: center;
 }
 #content #fondo section article{
-	text-align: center;
 	padding-top: 2em;
 	padding-bottom: 4em;
 }
@@ -136,11 +126,10 @@ nav{
 	padding: 1em 0 1em 0;
 	font-size: 13px;
 	width: 250px;
-
 }
 #content #fondo section article ul li img{
+	text-align: center;
 	border-radius: 100px;
-	
 	height: 180px;
 	width: 180px;
 
@@ -149,6 +138,9 @@ nav{
 	-ms-transition: transform 0.5s;
 	-moz-transition: transform 0.5s;
 	-webkit-transition: transform 0.5s;
+}
+#content #fondo section article ul li img,p{
+	display: block;
 }
 #content #fondo section article ul li img:hover{
 	transform: rotate(10deg);	
@@ -214,7 +206,6 @@ footer li{
 .btn-twitter:hover{
 	box-shadow: 0px 0px 1px 2px #6BC2FB;
 }
-
 .btn-google:hover{
 	box-shadow: 0px 0px 1px 2px #D43E33;
 }
