--- a/css/servicio.css
+++ b/css/servicio.css
@@ -11,19 +11,22 @@
 	font-size: 20px;
 }
 #content_servicio #servicios ul li {
-	color: #585858;
+	color: #F6F6F6;
 	vertical-align: top;
 	display: inline-block;
 	width: 250px;
 	height: 250px; 
+	margin-bottom: 10px;
 
-
-	transition: background 0.5s;
+	transition: background 5s;
 	-webkit-transition: background 0.5s;
+	-moz-transition: background 0.5s;
+	-o-transition: background 0.5s;
+	-ms-transition: background 0.5s;
 }
 #content_servicio #servicios ul li:hover {
-	color: #F3F3F3;
-	background: rgba(0, 0, 0, 0.7);
+	color: #AAAAAA;
+	background: rgba(220, 220, 220, 0.7);
 	
 }
 #content_servicio #servicios ul li img{
@@ -39,9 +42,10 @@
 	text-align: center;
 }
 #content_servicio #soporte{
-	background: #0073E8;
+	background: #FF8585;
 }
 #content_servicio #soporte h4{
+	color: #F0F0F0;
 	font-size: 35px;
 	padding: 1em 0 1em 0;
 }
@@ -55,7 +59,7 @@
 	display: inline-block;
 }
 #content_servicio #ventas{
-	background: #F00000;
+	background: #12A5FF;
 }
 #content_servicio #ventas h4{
 	font-size: 35px;
@@ -71,7 +75,7 @@
 	display: inline-block;
 }
 #content_servicio #instalacion{
-	background: #FFC91F
+	background: #FFB162
 }
 #content_servicio #instalacion h4{
 	font-size: 35px;
@@ -85,4 +89,18 @@
 }
 #content_servicio #instalacion figure,p{
 	display: inline-block;
+}
+
+.ventas,.soporte,.instalacion{
+	padding: 1em;
+	border-radius: 50px;
+}
+.ventas{
+	background-color: #12A5FF;
+}
+.soporte{
+	background-color: #FF8585;
+}
+.instalacion{
+	background-color: #FFB162;
 }
