--- a/css/mediaqueries.css
+++ b/css/mediaqueries.css
@@ -4,6 +4,7 @@
 
 
 @media screen and (min-width: 768px){
+
 	header #logo_alcocerti img{
 		width: 100%;
 	}
@@ -54,26 +55,13 @@
 	}
 
 	/*Contenedor */
-	#content #fondo #promociones ul li{
-		padding: 3em 0 3em 0;
-	}
-	#content #fondo #promociones ul li p {
-		width: 60%;
-	}
-	#content #fondo #promociones ul li figure{
-		width: 30%;
-	}
-	#content #fondo #promociones ul li p,figure{
-		vertical-align: middle;
-		display: inline-block;
-	}
 	#lista_productos ul li{
 		margin: 5px;
 	}
 	#lista_categorias,#content_productos{
 		padding-top: 2em;
 		display: inline-block;
-		vertical-align: middle;
+		vertical-align: top;
 	}
 	#lista_categorias{
 		width: 20%;
@@ -84,19 +72,51 @@
 
 	/* Servicios */
 
-	#content_servicio #servicios ul h3{
-		font-size: 25px;
+	#content_servicio #soporte figure{
+		width: 30%;
+	}
+	#content_servicio #soporte p{
+		width: 60%;
+	}
+	#content_servicio #ventas figure{
+		width: 30%;
+	}
+
+	#content_servicio #ventas p{
+		width: 60%;
+	}
+	#content_servicio #instalacion figure{
+		width: 30%;
+	}
+	#content_servicio #instalacion p{
+		width: 60%;
 	}
 
 	/* Fin Servicios */
+	/* Contacto */
+		#contenido_contacto #form_contacto{
+			width: 30%;
+		}
+		#contenido_contacto article{
+			width: 65%;
+		}
+		#contenido_contacto #form_contacto,article{
+			display: inline-block;
+			vertical-align: top;
+		}	
 
+	/* Fin Contacto*/
 
 	/*footer*/
 	footer li{
 		max-width: 400px;
 	}
 }
-
+@media screen and (min-width: 1000px){
+	#content #container{
+		display: block;
+	}
+}
 
 @media screen and (min-width: 1024px){
 	header #logo_alcocerti img{
