--- a/css/producto.css
+++ b/css/producto.css
@@ -53,6 +53,16 @@
 	height: 200px;
 	width: 200px;
 }
+#content_productos #lista_productos ul li h4{
+	color: #6A6A6A;
+}
+#content_productos #lista_productos ul li p{
+	background: #353535;
+	border-radius:6px 6px 6px 6px;
+	color: #E1E1E1;
+	font-size: 12px; 
+	width: 200px;
+}
 #content_productos #lista_productos ul #logo2 {
 	text-align: center;
 }
